# Breeze

./: README.md  breeze.cabal  breeze.code-workspace  out.n
app/: Main.hs
app/go/src/ast/: ast.go  builtins.go  go.mod
app/go/src/code/: code.go  go.mod
app/go/src/compiler/: compiler.go  go.mod  symbol_table.go
app/go/src/main/: go.mod  main.go
app/go/src/parser/: go.mod  parser.go
app/go/src/vm/: frame.go  go.mod  vm.go
dist-newstyle/cache/: compiler  config  elaborated-plan  improved-plan  plan.json  solver-plan  source-hashes  up-to-date
src/: Intermediary.hs  Parser.hs  TypeAnnotations.hs  TypeChecker.hs
test/: TestParser.hs
