cabal-version:          2.4
name:                   breeze
version:                0.1.0.0

-- A short (one-line) description of the package.
-- synopsis:

-- A longer description of the package.
-- description:

-- A URL where users can report bugs.
-- bug-reports:
license:                NONE
author:                 Ryan Brewer
maintainer:             ryanbrew317@gmail.com

-- A copyright notice.
-- copyright:
-- category:
extra-source-files:     CHANGELOG.md

common common-all
    build-depends:      base ^>=4.12.0.0,
                        QuickCheck >= 2.0,
                        cabal-test-quickcheck >= 0.1,
                        Cabal >= 3.0.1.0,
                        containers,
                        process >= 1.6.5.0,
                        parsec
    default-language:   Haskell2010

executable breeze
    import:             common-all
    main-is:            Main.hs

    -- Modules included in this executable, other than Main.
    other-modules:      Parser, TypeChecker, Intermediary, TypeAnnotations

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    hs-source-dirs:     app, src
    default-language:   Haskell2010

Test-Suite test-parser  
    import:             common-all
    type:               detailed-0.9
    hs-source-dirs:     src, test
    test-module:        TestParser
    other-modules:      Parser